Fix role -> get users  Role " " -> AuthencationService buildScope